--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 22
-    buildToolsVersion "22.0.1"
+    compileSdkVersion 21
+    buildToolsVersion "21.1.2"
 
     defaultConfig {
-        applicationId "com.johandamm.meridian"
-        minSdkVersion 14
-        targetSdkVersion 22
+        applicationId "com.example.otto.hardwareinventory"
+        minSdkVersion 15
+        targetSdkVersion 21
         versionCode 1
         versionName "1.0"
     }
@@ -18,9 +18,12 @@ android {
         }
     }
 }
+repositories {
+    mavenCentral()
 
-maven {
-    url "https://raw.github.com/embarkmobile/zxing-android-minimal/mvn-repo/maven-repository/"
+    maven {
+        url "https://raw.github.com/embarkmobile/zxing-android-minimal/mvn-repo/maven-repository/"
+    }
 }
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
